--- a/html.css
+++ b/html.css
@@ -37,5 +37,22 @@ tfoot{
 }
 iframe{
     width: 100%;
-    height: 500px;
+    height: 300px;
+}
+
+.float-right{
+    float: right;
+}
+.float-left{
+    float: left;
+}
+.whitebg{
+    border: 1px solid black;
+    background-color: white;
+}
+.clear{
+    clear: both;
+}
+.margin-top{
+    margin-top: 5px;
 }
