修改目录结构、worker sse  应用程序缓存

--- a/css/html.css
+++ b/css/html.css
@@ -1,4 +1,9 @@
 @charset "utf-8";
+header, section, footer, aside, nav, article, figure
+{ 
+    display: block; 
+}
+
 #paragraph_1{
     text-align: center;
     color: aqua;
